chore: Use Locale.ROOT when doing string comparisons and use getFirst() instead of get(0)