@@ -41,7 +41,7 @@ class DummyAcceptHeadersFuzzerTest {
         List<Set<CatsHeader>> headers = dummyAcceptHeadersFuzzer.getHeaders(data);
 
         Assertions.assertThat(headers).hasSize(1);
-        Assertions.assertThat(headers.get(0)).contains(CatsHeader.builder().name("Accept").build());
+        Assertions.assertThat(headers.getFirst()).contains(CatsHeader.builder().name("Accept").build());
     }
 
     @Test
